// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EncounterScreen layout snapshots > matches snapshots for full 1920x1080 layout, minimum viable layout, and full 2560x1440 sample > encounter-screen-2560x1440 1`] = `
<DocumentFragment>
  <div
    style="width: 2560px; height: 1440px;"
  >
    <section
      data-testid="encounter-screen-shell"
      style="height: 100dvh; display: flex; flex-direction: column; overflow: hidden; padding: 16px; gap: 16px; background: var(--bg-abyss);"
    >
      <div
        data-testid="encounter-screen-header"
      >
        <div>
          BEAT 2 - NOW
        </div>
      </div>
      <div
        style="min-height: 0px; flex: 1 1 0%; display: grid; grid-template-columns: 440px minmax(0, 1fr) 540px; gap: 16px; overflow: hidden;"
      >
        <aside
          data-testid="encounter-eira-hero-panel"
          style="height: 100%; min-height: 0px; display: flex; flex-direction: column; gap: 12px; padding: 16px; border-radius: 12px; border: 1px solid var(--border-subtle); background: linear-gradient(180deg, var(--bg-deep), var(--bg-surface)); overflow-y: auto;"
        >
          <header
            style="display: flex; align-items: center; justify-content: space-between; gap: 8px;"
          >
            <span
              style="color: var(--accent-gold); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.15em;"
            >
              The Protagonist
            </span>
          </header>
          <div
            style="display: grid; place-items: center;"
          >
            <div
              aria-hidden="true"
              style="width: 212px; height: 236px; border-radius: 8px; border: 1px solid var(--border-subtle); display: grid; place-items: center; background: radial-gradient(circle at 35% 20%, color-mix(in srgb, var(--accent-gold) 20%, transparent), transparent 35%), linear-gradient(180deg, var(--bg-raised), var(--bg-deep)); color: var(--text-muted); font-family: var(--font-display); letter-spacing: 0.12em; font-size: var(--text-sm);"
            >
              EO
            </div>
          </div>
          <div>
            <h2
              style="margin: 0px; color: var(--text-primary); font-family: var(--font-display); font-size: var(--text-xl);"
            >
              Eira of Bren
            </h2>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-top: 2px;"
            >
              IRON - DRAWN BOND - 28 WINTERS
            </div>
            <div
              style="color: var(--text-secondary); font-size: var(--text-xs); font-style: italic; margin-top: 4px;"
            >
              steady, but reading the room
            </div>
          </div>
          <section>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
            >
              Capability In This Scene
            </div>
            <div
              style="display: grid; gap: 6px;"
            >
              <div
                data-testid="capability-strip"
                style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
              >
                <div
                  style="color: var(--sphere-force-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
                >
                  IRON
                </div>
                <div
                  style="display: flex; gap: 4px;"
                >
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
                  />
                </div>
                <div
                  style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
                >
                  a steady arm in a tight queue
                </div>
              </div>
              <div
                data-testid="capability-strip"
                style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
              >
                <div
                  style="color: var(--sphere-mind-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
                >
                  EYE
                </div>
                <div
                  style="display: flex; gap: 4px;"
                >
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
                  />
                </div>
                <div
                  style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
                >
                  she misses little
                </div>
              </div>
              <div
                data-testid="capability-strip"
                style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
              >
                <div
                  style="color: var(--sphere-spirit-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
                >
                  HEART
                </div>
                <div
                  style="display: flex; gap: 4px;"
                >
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
                  />
                </div>
                <div
                  style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
                >
                  her deepest thread
                </div>
              </div>
            </div>
          </section>
          <section>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
            >
              She Carries Into This Scene
            </div>
            <div
              style="display: grid; gap: 8px;"
            >
              <article
                style="border-radius: 10px; border: 1px solid var(--border-subtle); background: var(--bg-raised); padding: 8px 10px;"
              >
                <div
                  style="color: var(--text-primary); font-size: var(--text-sm);"
                >
                  Captain's token
                </div>
                <div
                  style="color: var(--text-tertiary); font-size: var(--text-xs);"
                >
                  small favor - civic guard remembers her
                </div>
              </article>
              <article
                style="border-radius: 10px; border: 1px solid var(--sphere-spirit); background: linear-gradient(90deg, color-mix(in srgb, var(--sphere-spirit-bright) 18%, transparent), transparent); padding: 8px 10px;"
              >
                <div
                  style="color: var(--sphere-spirit-bright); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.1em;"
                >
                  Vow - Active Now
                </div>
                <div
                  style="color: var(--text-primary); font-size: var(--text-sm);"
                >
                  Vow to the small folk
                </div>
                <div
                  style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic;"
                >
                  she will not crush a frightened man
                </div>
              </article>
            </div>
          </section>
          <section>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
            >
              Recent Moments
            </div>
            <div
              style="display: grid; gap: 6px;"
            >
              <article
                style="border-radius: 10px; border: 1px solid var(--border-subtle); background: var(--bg-raised); padding: 8px 10px;"
              >
                <div
                  style="color: var(--text-primary); font-size: var(--text-sm);"
                >
                  Iron market in winter
                </div>
                <div
                  style="color: var(--text-tertiary); font-size: var(--text-xs);"
                >
                  Veiren tested her patience in the open queue.
                </div>
              </article>
            </div>
          </section>
        </aside>
        <div
          data-testid="encounter-screen-center-column"
          style="min-height: 0px; border-radius: 12px; border: 1px solid var(--border-subtle); background: var(--bg-surface); overflow: hidden;"
        >
          <div
            style="padding: 12px; display: grid; gap: 10px;"
          >
            <div
              aria-label="Stir her resolve."
              aria-pressed="true"
              class="pulse-gold-on-hover"
              data-reach="iron"
              data-testid="encounter-choice-card-iron"
              role="button"
              style="flex: 1 1 0%; padding: 14px; border-radius: 8px; background: var(--bg-surface); border: 1px solid var(--reach-sphere-bright); opacity: 1; transition: opacity 300ms ease-out, border-color 300ms ease-out; position: relative; cursor: pointer; display: flex; flex-direction: column; outline: none;"
              tabindex="0"
            >
              <div
                data-testid="encounter-choice-card-sphere-line"
                style="color: var(--reach-sphere-bright); font-family: var(--font-display); font-size: 11px; letter-spacing: 0.12em; text-transform: uppercase;"
              >
                iron · fuller breath
              </div>
              <div
                data-testid="encounter-choice-card-god-verb"
                style="font-family: var(--font-body); font-size: 18px; font-style: italic; font-weight: 400; color: var(--text-primary); margin-top: 6px;"
              >
                Stir her resolve.
              </div>
              <div
                aria-hidden="true"
                style="height: 1px; width: 36px; background: var(--reach-sphere); margin: 8px 0px 10px;"
              />
              <div
                data-testid="encounter-choice-card-agent-reaction"
                style="font-size: 13px; line-height: 1.55; color: var(--text-primary);"
              >
                Her shoulders set. She closes the distance and meets Veiren's eye.
              </div>
              <div
                data-testid="encounter-choice-card-tilts-toward"
                style="color: var(--text-tertiary); font-size: 12px; margin-top: 10px;"
              >
                Tilts toward: a wound, a debt, or his favour earned
              </div>
              <div
                data-testid="encounter-moral-axis-tilt"
                style="display: flex; align-items: baseline; gap: 6px; color: var(--text-tertiary); font-size: 11px; margin-top: 4px;"
              >
                <span
                  aria-hidden="true"
                  style="color: var(--reach-sphere-bright);"
                >
                  ↬
                </span>
                <span>
                  tilts toward
                </span>
                <span
                  style="color: var(--reach-sphere-bright); font-family: var(--font-display); letter-spacing: 0.12em; text-transform: uppercase;"
                >
                  conqueror
                </span>
              </div>
              <div
                data-testid="encounter-choice-card-fail-forward"
                style="color: var(--text-tertiary); font-size: 11px; font-style: italic; margin-top: 6px;"
              >
                ↗ on fail — she draws steel and the queue splinters
              </div>
              <div
                data-testid="encounter-choice-card-consumes-item"
                style="display: flex; align-items: center; gap: 6px; color: var(--text-muted); font-size: 11px; margin-top: 6px; cursor: help;"
              >
                <span
                  aria-hidden="true"
                >
                  ◇
                </span>
                <span>
                  consumes: captain-token
                </span>
              </div>
            </div>
            <div
              aria-label="Lay a gentler hand on the thread."
              aria-pressed="false"
              class="pulse-gold-on-hover"
              data-reach="charm"
              data-testid="encounter-choice-card-charm"
              role="button"
              style="flex: 1 1 0%; padding: 14px; border-radius: 8px; background: var(--bg-surface); border: 1px solid var(--border-subtle); opacity: 0.35; transition: opacity 300ms ease-out, border-color 300ms ease-out; position: relative; cursor: pointer; display: flex; flex-direction: column; outline: none;"
              tabindex="0"
            >
              <div
                data-testid="encounter-choice-card-sphere-line"
                style="color: var(--reach-sphere-bright); font-family: var(--font-display); font-size: 11px; letter-spacing: 0.12em; text-transform: uppercase;"
              >
                 · fuller breath
              </div>
              <div
                data-testid="encounter-choice-card-god-verb"
                style="font-family: var(--font-body); font-size: 18px; font-style: italic; font-weight: 400; color: var(--text-primary); margin-top: 6px;"
              >
                Lay a gentler hand on the thread.
              </div>
              <div
                aria-hidden="true"
                style="height: 1px; width: 36px; background: var(--reach-sphere); margin: 8px 0px 10px;"
              />
              <div
                data-testid="encounter-choice-card-agent-reaction"
                style="font-size: 13px; line-height: 1.55; color: var(--text-primary);"
              >
                Her shoulders set. She closes the distance and meets Veiren's eye.
              </div>
              <div
                data-testid="encounter-choice-card-tilts-toward"
                style="color: var(--text-tertiary); font-size: 12px; margin-top: 10px;"
              >
                Tilts toward: a wound, a debt, or his favour earned
              </div>
              <div
                data-testid="encounter-moral-axis-tilt"
                style="display: flex; align-items: baseline; gap: 6px; color: var(--text-tertiary); font-size: 11px; margin-top: 4px;"
              >
                <span
                  aria-hidden="true"
                  style="color: var(--reach-sphere-bright);"
                >
                  ↬
                </span>
                <span>
                  tilts toward
                </span>
                <span
                  style="color: var(--reach-sphere-bright); font-family: var(--font-display); letter-spacing: 0.12em; text-transform: uppercase;"
                >
                  caregiver
                </span>
              </div>
              <div
                data-testid="encounter-choice-card-fail-forward"
                style="color: var(--text-tertiary); font-size: 11px; font-style: italic; margin-top: 6px;"
              >
                ↗ on fail — she draws steel and the queue splinters
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="encounter-screen-right-rail"
          style="min-height: 0px; border-radius: 12px; border: 1px solid var(--border-subtle); background: var(--bg-surface); overflow: hidden;"
        >
          <div
            style="height: 100%; display: grid; grid-template-rows: 1fr 1fr; gap: 8px;"
          >
            <section
              data-testid="encounter-cast-rail"
              style="display: flex; flex-direction: column; gap: 10px; padding: 12px; height: 100%; overflow-y: auto; background: var(--bg-surface);"
            >
              <div
                style="display: flex; justify-content: space-between; align-items: baseline;"
              >
                <div
                  style="font-family: var(--font-display); font-size: 11px; letter-spacing: 0.16em; text-transform: uppercase; color: var(--text-tertiary);"
                >
                  Cast In The Scene
                </div>
                <div
                  style="font-size: 10px; color: var(--text-muted);"
                >
                  3
                </div>
              </div>
              <div
                data-testid="encounter-cast-group-primary"
              >
                <div
                  style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 6px;"
                >
                  <div
                    style="font-size: 10px; text-transform: uppercase; letter-spacing: 0.1em; color: var(--text-muted);"
                  >
                    Primary
                  </div>
                </div>
                <div
                  style="display: flex; flex-direction: column; gap: 6px;"
                >
                  <button
                    data-testid="encounter-cast-tile-a"
                    disabled=""
                    style="width: 100%; display: flex; gap: 10px; padding: 10px 8px; border-radius: 10px; border: 1px solid var(--border-subtle); background: var(--bg-raised); text-align: left; cursor: default; opacity: 1;"
                    type="button"
                  >
                    <div
                      aria-hidden="true"
                      style="width: 42px; height: 42px; border-radius: 999px; border: 1px solid var(--border-subtle); background: radial-gradient(circle at 35% 35%, var(--bg-hover), var(--bg-deep)); flex-shrink: 0;"
                    />
                    <div
                      style="min-width: 0px; flex: 1 1 0%;"
                    >
                      <div
                        style="display: flex; justify-content: space-between; align-items: center; gap: 8px;"
                      >
                        <div
                          style="font-family: var(--font-display); font-size: 13px; color: var(--text-primary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                        >
                          Cast a
                        </div>
                      </div>
                      <div
                        style="margin-top: 2px; font-size: 10px; color: var(--accent-gold-dim); text-transform: uppercase; letter-spacing: 0.08em;"
                      >
                        IRON · witness
                      </div>
                      <div
                        style="margin-top: 4px; font-size: 11px; color: var(--text-tertiary); line-height: 1.4;"
                      >
                        disposition: guarded
                      </div>
                      <div
                        data-testid="encounter-cast-tile-relationship-a"
                        style="margin-top: 2px; font-size: 11px; font-style: italic; color: var(--text-secondary); line-height: 1.35;"
                      >
                        to her: a measured distance
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                data-testid="encounter-cast-group-background"
              >
                <div
                  style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 6px;"
                >
                  <div
                    style="font-size: 10px; text-transform: uppercase; letter-spacing: 0.1em; color: var(--text-muted);"
                  >
                    Background
                  </div>
                </div>
                <div
                  style="display: flex; flex-direction: column; gap: 6px;"
                >
                  <button
                    data-testid="encounter-cast-tile-b"
                    disabled=""
                    style="width: 100%; display: flex; gap: 10px; padding: 10px 8px; border-radius: 10px; border: 1px solid var(--border-subtle); background: var(--bg-raised); text-align: left; cursor: default; opacity: 0.85;"
                    type="button"
                  >
                    <div
                      aria-hidden="true"
                      style="width: 42px; height: 42px; border-radius: 999px; border: 1px solid var(--border-subtle); background: radial-gradient(circle at 35% 35%, var(--bg-hover), var(--bg-deep)); flex-shrink: 0;"
                    />
                    <div
                      style="min-width: 0px; flex: 1 1 0%;"
                    >
                      <div
                        style="display: flex; justify-content: space-between; align-items: center; gap: 8px;"
                      >
                        <div
                          style="font-family: var(--font-display); font-size: 13px; color: var(--text-primary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                        >
                          Cast b
                        </div>
                      </div>
                      <div
                        style="margin-top: 2px; font-size: 10px; color: var(--accent-gold-dim); text-transform: uppercase; letter-spacing: 0.08em;"
                      >
                        IRON · witness
                      </div>
                      <div
                        style="margin-top: 4px; font-size: 11px; color: var(--text-tertiary); line-height: 1.4;"
                      >
                        disposition: guarded
                      </div>
                      <div
                        data-testid="encounter-cast-tile-relationship-b"
                        style="margin-top: 2px; font-size: 11px; font-style: italic; color: var(--text-secondary); line-height: 1.35;"
                      >
                        to her: a measured distance
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                data-testid="encounter-cast-group-offstage"
              >
                <div
                  style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 6px;"
                >
                  <div
                    style="font-size: 10px; text-transform: uppercase; letter-spacing: 0.1em; color: var(--text-muted);"
                  >
                    Offstage
                  </div>
                  <span
                    style="font-size: 9px; text-transform: uppercase; letter-spacing: 0.08em; color: var(--text-muted); border: 1px solid var(--border-subtle); border-radius: 999px; padding: 1px 6px;"
                  >
                    stakes
                  </span>
                </div>
                <div
                  style="display: flex; flex-direction: column; gap: 6px;"
                >
                  <button
                    data-testid="encounter-cast-tile-c"
                    disabled=""
                    style="width: 100%; display: flex; gap: 10px; padding: 10px 8px; border-radius: 10px; border: 1px solid var(--border-subtle); background: var(--bg-raised); text-align: left; cursor: default; opacity: 0.65;"
                    type="button"
                  >
                    <div
                      aria-hidden="true"
                      style="width: 42px; height: 42px; border-radius: 999px; border: 1px solid var(--border-subtle); background: radial-gradient(circle at 35% 35%, var(--bg-hover), var(--bg-deep)); flex-shrink: 0;"
                    />
                    <div
                      style="min-width: 0px; flex: 1 1 0%;"
                    >
                      <div
                        style="display: flex; justify-content: space-between; align-items: center; gap: 8px;"
                      >
                        <div
                          style="font-family: var(--font-display); font-size: 13px; color: var(--text-primary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                        >
                          Cast c
                        </div>
                      </div>
                      <div
                        style="margin-top: 2px; font-size: 10px; color: var(--accent-gold-dim); text-transform: uppercase; letter-spacing: 0.08em;"
                      >
                        IRON · witness
                      </div>
                      <div
                        style="margin-top: 4px; font-size: 11px; color: var(--text-tertiary); line-height: 1.4;"
                      >
                        disposition: guarded
                      </div>
                      <div
                        data-testid="encounter-cast-tile-relationship-c"
                        style="margin-top: 2px; font-size: 11px; font-style: italic; color: var(--text-secondary); line-height: 1.35;"
                      >
                        to her: a measured distance
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </section>
            <section
              data-testid="encounter-ascendant-hand"
              style="display: flex; flex-direction: column; gap: 8px; padding: 12px; background: var(--bg-surface);"
            >
              <div
                style="display: flex; justify-content: space-between; align-items: center;"
              >
                <div
                  style="display: flex; align-items: center; gap: 6px; font-family: var(--font-display); font-size: 11px; letter-spacing: 0.16em; text-transform: uppercase; color: var(--text-tertiary);"
                >
                  Your Hand
                  <span
                    data-testid="encounter-ascendant-hand-new-badge"
                    style="font-size: 9px; letter-spacing: 0.08em; color: var(--accent-gold); border: 1px solid var(--accent-gold-dim); border-radius: 999px; padding: 1px 6px;"
                  >
                    +1 NEW
                  </span>
                </div>
                <div
                  style="font-size: 10px; color: var(--text-muted);"
                >
                  3 playable
                </div>
              </div>
              <button
                data-testid="encounter-ascendant-card-a-playable"
                style="width: 100%; padding: 8px 10px; border-radius: 8px; border: 1px solid var(--border-accent); background: var(--bg-raised); text-align: left; cursor: pointer; opacity: 1;"
                type="button"
              >
                <div
                  style="display: flex; justify-content: space-between; align-items: baseline; gap: 8px;"
                >
                  <div
                    style="font-family: var(--font-display); font-size: 13px; color: var(--text-primary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                  >
                    Card a
                  </div>
                  <div
                    style="font-size: 10px; color: var(--text-muted); white-space: nowrap;"
                  >
                    2 ESS
                  </div>
                </div>
                <div
                  style="margin-top: 3px; font-size: 11px; line-height: 1.35; color: var(--text-tertiary);"
                >
                  a divine nudge for this scene
                </div>
              </button>
              <button
                data-testid="encounter-ascendant-card-b-playable"
                style="width: 100%; padding: 8px 10px; border-radius: 8px; border: 1px solid var(--border-accent); background: var(--bg-raised); text-align: left; cursor: pointer; opacity: 1;"
                type="button"
              >
                <div
                  style="display: flex; justify-content: space-between; align-items: baseline; gap: 8px;"
                >
                  <div
                    style="font-family: var(--font-display); font-size: 13px; color: var(--text-primary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                  >
                    Card b
                  </div>
                  <div
                    style="font-size: 10px; color: var(--text-muted); white-space: nowrap;"
                  >
                    2 ESS
                  </div>
                </div>
                <div
                  style="margin-top: 3px; font-size: 11px; line-height: 1.35; color: var(--text-tertiary);"
                >
                  a divine nudge for this scene
                </div>
              </button>
              <button
                data-testid="encounter-ascendant-card-c-playable"
                style="width: 100%; padding: 8px 10px; border-radius: 8px; border: 1px solid var(--border-accent); background: var(--bg-raised); text-align: left; cursor: pointer; opacity: 1; animation: breathe 1.8s ease-in-out infinite;"
                type="button"
              >
                <div
                  style="display: flex; justify-content: space-between; align-items: baseline; gap: 8px;"
                >
                  <div
                    style="font-family: var(--font-display); font-size: 13px; color: var(--text-primary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                  >
                    Card c
                  </div>
                  <div
                    style="font-size: 10px; color: var(--text-muted); white-space: nowrap;"
                  >
                    2 ESS
                  </div>
                </div>
                <div
                  style="margin-top: 3px; font-size: 11px; line-height: 1.35; color: var(--text-tertiary);"
                >
                  a divine nudge for this scene
                </div>
              </button>
              <button
                data-testid="encounter-ascendant-hand-disclosure"
                style="margin-top: 2px; align-self: flex-start; border: medium; background: transparent; color: var(--text-secondary); font-size: 11px; cursor: pointer;"
                type="button"
              >
                + 1 more
              </button>
            </section>
          </div>
        </div>
      </div>
      <div
        data-testid="encounter-screen-bottom-strip"
        style="min-height: 100px; max-height: 100px; border-radius: 12px; border: 1px solid var(--border-subtle); background: var(--bg-deep); overflow: hidden;"
      >
        <div
          style="padding: 8px;"
        >
          <div
            data-expanded="false"
            data-testid="encounter-outcome-forecast-band"
            data-tier="favorable"
            style="display: flex; flex-direction: column; gap: 4px; padding: 8px 12px; border-radius: 8px; border: 1px solid var(--border-subtle); background: var(--bg-raised); transition: background 200ms ease-out;"
          >
            <div
              data-testid="encounter-outcome-forecast-tier"
              style="color: var(--text-secondary); font-family: var(--font-body); font-size: 12px; font-style: italic; line-height: 1.4;"
            >
              the threads pull toward her
            </div>
            <ul
              data-testid="encounter-outcome-forecast-factors"
              style="margin: 0px; padding: 0px; list-style: none; display: flex; flex-direction: column; gap: 2px; color: var(--text-tertiary); font-size: 11px; line-height: 1.4; transition: opacity 200ms ease-out;"
            >
              <li>
                the captain remembers her name
              </li>
            </ul>
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`EncounterScreen layout snapshots > matches snapshots for full 1920x1080 layout, minimum viable layout, and full 2560x1440 sample > encounter-screen-full-1920x1080 1`] = `
<DocumentFragment>
  <div
    style="width: 1920px; height: 1080px;"
  >
    <section
      data-testid="encounter-screen-shell"
      style="height: 100dvh; display: flex; flex-direction: column; overflow: hidden; padding: 16px; gap: 16px; background: var(--bg-abyss);"
    >
      <div
        data-testid="encounter-screen-header"
      >
        <div>
          BEAT 2 - NOW
        </div>
      </div>
      <div
        style="min-height: 0px; flex: 1 1 0%; display: grid; grid-template-columns: 440px minmax(0, 1fr) 540px; gap: 16px; overflow: hidden;"
      >
        <aside
          data-testid="encounter-eira-hero-panel"
          style="height: 100%; min-height: 0px; display: flex; flex-direction: column; gap: 12px; padding: 16px; border-radius: 12px; border: 1px solid var(--border-subtle); background: linear-gradient(180deg, var(--bg-deep), var(--bg-surface)); overflow-y: auto;"
        >
          <header
            style="display: flex; align-items: center; justify-content: space-between; gap: 8px;"
          >
            <span
              style="color: var(--accent-gold); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.15em;"
            >
              The Protagonist
            </span>
          </header>
          <div
            style="display: grid; place-items: center;"
          >
            <div
              aria-hidden="true"
              style="width: 212px; height: 236px; border-radius: 8px; border: 1px solid var(--border-subtle); display: grid; place-items: center; background: radial-gradient(circle at 35% 20%, color-mix(in srgb, var(--accent-gold) 20%, transparent), transparent 35%), linear-gradient(180deg, var(--bg-raised), var(--bg-deep)); color: var(--text-muted); font-family: var(--font-display); letter-spacing: 0.12em; font-size: var(--text-sm);"
            >
              EO
            </div>
          </div>
          <div>
            <h2
              style="margin: 0px; color: var(--text-primary); font-family: var(--font-display); font-size: var(--text-xl);"
            >
              Eira of Bren
            </h2>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-top: 2px;"
            >
              IRON - DRAWN BOND - 28 WINTERS
            </div>
            <div
              style="color: var(--text-secondary); font-size: var(--text-xs); font-style: italic; margin-top: 4px;"
            >
              steady, but reading the room
            </div>
          </div>
          <section>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
            >
              Capability In This Scene
            </div>
            <div
              style="display: grid; gap: 6px;"
            >
              <div
                data-testid="capability-strip"
                style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
              >
                <div
                  style="color: var(--sphere-force-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
                >
                  IRON
                </div>
                <div
                  style="display: flex; gap: 4px;"
                >
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
                  />
                </div>
                <div
                  style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
                >
                  a steady arm in a tight queue
                </div>
              </div>
              <div
                data-testid="capability-strip"
                style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
              >
                <div
                  style="color: var(--sphere-mind-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
                >
                  EYE
                </div>
                <div
                  style="display: flex; gap: 4px;"
                >
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
                  />
                </div>
                <div
                  style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
                >
                  she misses little
                </div>
              </div>
              <div
                data-testid="capability-strip"
                style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
              >
                <div
                  style="color: var(--sphere-spirit-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
                >
                  HEART
                </div>
                <div
                  style="display: flex; gap: 4px;"
                >
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
                  />
                </div>
                <div
                  style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
                >
                  her deepest thread
                </div>
              </div>
            </div>
          </section>
          <section>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
            >
              She Carries Into This Scene
            </div>
            <div
              style="display: grid; gap: 8px;"
            >
              <article
                style="border-radius: 10px; border: 1px solid var(--border-subtle); background: var(--bg-raised); padding: 8px 10px;"
              >
                <div
                  style="color: var(--text-primary); font-size: var(--text-sm);"
                >
                  Captain's token
                </div>
                <div
                  style="color: var(--text-tertiary); font-size: var(--text-xs);"
                >
                  small favor - civic guard remembers her
                </div>
              </article>
              <article
                style="border-radius: 10px; border: 1px solid var(--sphere-spirit); background: linear-gradient(90deg, color-mix(in srgb, var(--sphere-spirit-bright) 18%, transparent), transparent); padding: 8px 10px;"
              >
                <div
                  style="color: var(--sphere-spirit-bright); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.1em;"
                >
                  Vow - Active Now
                </div>
                <div
                  style="color: var(--text-primary); font-size: var(--text-sm);"
                >
                  Vow to the small folk
                </div>
                <div
                  style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic;"
                >
                  she will not crush a frightened man
                </div>
              </article>
            </div>
          </section>
          <section>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
            >
              Recent Moments
            </div>
            <div
              style="display: grid; gap: 6px;"
            >
              <article
                style="border-radius: 10px; border: 1px solid var(--border-subtle); background: var(--bg-raised); padding: 8px 10px;"
              >
                <div
                  style="color: var(--text-primary); font-size: var(--text-sm);"
                >
                  Iron market in winter
                </div>
                <div
                  style="color: var(--text-tertiary); font-size: var(--text-xs);"
                >
                  Veiren tested her patience in the open queue.
                </div>
              </article>
            </div>
          </section>
        </aside>
        <div
          data-testid="encounter-screen-center-column"
          style="min-height: 0px; border-radius: 12px; border: 1px solid var(--border-subtle); background: var(--bg-surface); overflow: hidden;"
        >
          <div
            style="padding: 12px; display: grid; gap: 10px;"
          >
            <div
              aria-label="Stir her resolve."
              aria-pressed="true"
              class="pulse-gold-on-hover"
              data-reach="iron"
              data-testid="encounter-choice-card-iron"
              role="button"
              style="flex: 1 1 0%; padding: 14px; border-radius: 8px; background: var(--bg-surface); border: 1px solid var(--reach-sphere-bright); opacity: 1; transition: opacity 300ms ease-out, border-color 300ms ease-out; position: relative; cursor: pointer; display: flex; flex-direction: column; outline: none;"
              tabindex="0"
            >
              <div
                data-testid="encounter-choice-card-sphere-line"
                style="color: var(--reach-sphere-bright); font-family: var(--font-display); font-size: 11px; letter-spacing: 0.12em; text-transform: uppercase;"
              >
                iron · fuller breath
              </div>
              <div
                data-testid="encounter-choice-card-god-verb"
                style="font-family: var(--font-body); font-size: 18px; font-style: italic; font-weight: 400; color: var(--text-primary); margin-top: 6px;"
              >
                Stir her resolve.
              </div>
              <div
                aria-hidden="true"
                style="height: 1px; width: 36px; background: var(--reach-sphere); margin: 8px 0px 10px;"
              />
              <div
                data-testid="encounter-choice-card-agent-reaction"
                style="font-size: 13px; line-height: 1.55; color: var(--text-primary);"
              >
                Her shoulders set. She closes the distance and meets Veiren's eye.
              </div>
              <div
                data-testid="encounter-choice-card-tilts-toward"
                style="color: var(--text-tertiary); font-size: 12px; margin-top: 10px;"
              >
                Tilts toward: a wound, a debt, or his favour earned
              </div>
              <div
                data-testid="encounter-moral-axis-tilt"
                style="display: flex; align-items: baseline; gap: 6px; color: var(--text-tertiary); font-size: 11px; margin-top: 4px;"
              >
                <span
                  aria-hidden="true"
                  style="color: var(--reach-sphere-bright);"
                >
                  ↬
                </span>
                <span>
                  tilts toward
                </span>
                <span
                  style="color: var(--reach-sphere-bright); font-family: var(--font-display); letter-spacing: 0.12em; text-transform: uppercase;"
                >
                  conqueror
                </span>
              </div>
              <div
                data-testid="encounter-choice-card-fail-forward"
                style="color: var(--text-tertiary); font-size: 11px; font-style: italic; margin-top: 6px;"
              >
                ↗ on fail — she draws steel and the queue splinters
              </div>
              <div
                data-testid="encounter-choice-card-consumes-item"
                style="display: flex; align-items: center; gap: 6px; color: var(--text-muted); font-size: 11px; margin-top: 6px; cursor: help;"
              >
                <span
                  aria-hidden="true"
                >
                  ◇
                </span>
                <span>
                  consumes: captain-token
                </span>
              </div>
            </div>
            <div
              aria-label="Lay a gentler hand on the thread."
              aria-pressed="false"
              class="pulse-gold-on-hover"
              data-reach="charm"
              data-testid="encounter-choice-card-charm"
              role="button"
              style="flex: 1 1 0%; padding: 14px; border-radius: 8px; background: var(--bg-surface); border: 1px solid var(--border-subtle); opacity: 0.35; transition: opacity 300ms ease-out, border-color 300ms ease-out; position: relative; cursor: pointer; display: flex; flex-direction: column; outline: none;"
              tabindex="0"
            >
              <div
                data-testid="encounter-choice-card-sphere-line"
                style="color: var(--reach-sphere-bright); font-family: var(--font-display); font-size: 11px; letter-spacing: 0.12em; text-transform: uppercase;"
              >
                 · fuller breath
              </div>
              <div
                data-testid="encounter-choice-card-god-verb"
                style="font-family: var(--font-body); font-size: 18px; font-style: italic; font-weight: 400; color: var(--text-primary); margin-top: 6px;"
              >
                Lay a gentler hand on the thread.
              </div>
              <div
                aria-hidden="true"
                style="height: 1px; width: 36px; background: var(--reach-sphere); margin: 8px 0px 10px;"
              />
              <div
                data-testid="encounter-choice-card-agent-reaction"
                style="font-size: 13px; line-height: 1.55; color: var(--text-primary);"
              >
                Her shoulders set. She closes the distance and meets Veiren's eye.
              </div>
              <div
                data-testid="encounter-choice-card-tilts-toward"
                style="color: var(--text-tertiary); font-size: 12px; margin-top: 10px;"
              >
                Tilts toward: a wound, a debt, or his favour earned
              </div>
              <div
                data-testid="encounter-moral-axis-tilt"
                style="display: flex; align-items: baseline; gap: 6px; color: var(--text-tertiary); font-size: 11px; margin-top: 4px;"
              >
                <span
                  aria-hidden="true"
                  style="color: var(--reach-sphere-bright);"
                >
                  ↬
                </span>
                <span>
                  tilts toward
                </span>
                <span
                  style="color: var(--reach-sphere-bright); font-family: var(--font-display); letter-spacing: 0.12em; text-transform: uppercase;"
                >
                  caregiver
                </span>
              </div>
              <div
                data-testid="encounter-choice-card-fail-forward"
                style="color: var(--text-tertiary); font-size: 11px; font-style: italic; margin-top: 6px;"
              >
                ↗ on fail — she draws steel and the queue splinters
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="encounter-screen-right-rail"
          style="min-height: 0px; border-radius: 12px; border: 1px solid var(--border-subtle); background: var(--bg-surface); overflow: hidden;"
        >
          <div
            style="height: 100%; display: grid; grid-template-rows: 1fr 1fr; gap: 8px;"
          >
            <section
              data-testid="encounter-cast-rail"
              style="display: flex; flex-direction: column; gap: 10px; padding: 12px; height: 100%; overflow-y: auto; background: var(--bg-surface);"
            >
              <div
                style="display: flex; justify-content: space-between; align-items: baseline;"
              >
                <div
                  style="font-family: var(--font-display); font-size: 11px; letter-spacing: 0.16em; text-transform: uppercase; color: var(--text-tertiary);"
                >
                  Cast In The Scene
                </div>
                <div
                  style="font-size: 10px; color: var(--text-muted);"
                >
                  3
                </div>
              </div>
              <div
                data-testid="encounter-cast-group-primary"
              >
                <div
                  style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 6px;"
                >
                  <div
                    style="font-size: 10px; text-transform: uppercase; letter-spacing: 0.1em; color: var(--text-muted);"
                  >
                    Primary
                  </div>
                </div>
                <div
                  style="display: flex; flex-direction: column; gap: 6px;"
                >
                  <button
                    data-testid="encounter-cast-tile-a"
                    disabled=""
                    style="width: 100%; display: flex; gap: 10px; padding: 10px 8px; border-radius: 10px; border: 1px solid var(--border-subtle); background: var(--bg-raised); text-align: left; cursor: default; opacity: 1;"
                    type="button"
                  >
                    <div
                      aria-hidden="true"
                      style="width: 42px; height: 42px; border-radius: 999px; border: 1px solid var(--border-subtle); background: radial-gradient(circle at 35% 35%, var(--bg-hover), var(--bg-deep)); flex-shrink: 0;"
                    />
                    <div
                      style="min-width: 0px; flex: 1 1 0%;"
                    >
                      <div
                        style="display: flex; justify-content: space-between; align-items: center; gap: 8px;"
                      >
                        <div
                          style="font-family: var(--font-display); font-size: 13px; color: var(--text-primary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                        >
                          Cast a
                        </div>
                      </div>
                      <div
                        style="margin-top: 2px; font-size: 10px; color: var(--accent-gold-dim); text-transform: uppercase; letter-spacing: 0.08em;"
                      >
                        IRON · witness
                      </div>
                      <div
                        style="margin-top: 4px; font-size: 11px; color: var(--text-tertiary); line-height: 1.4;"
                      >
                        disposition: guarded
                      </div>
                      <div
                        data-testid="encounter-cast-tile-relationship-a"
                        style="margin-top: 2px; font-size: 11px; font-style: italic; color: var(--text-secondary); line-height: 1.35;"
                      >
                        to her: a measured distance
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                data-testid="encounter-cast-group-background"
              >
                <div
                  style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 6px;"
                >
                  <div
                    style="font-size: 10px; text-transform: uppercase; letter-spacing: 0.1em; color: var(--text-muted);"
                  >
                    Background
                  </div>
                </div>
                <div
                  style="display: flex; flex-direction: column; gap: 6px;"
                >
                  <button
                    data-testid="encounter-cast-tile-b"
                    disabled=""
                    style="width: 100%; display: flex; gap: 10px; padding: 10px 8px; border-radius: 10px; border: 1px solid var(--border-subtle); background: var(--bg-raised); text-align: left; cursor: default; opacity: 0.85;"
                    type="button"
                  >
                    <div
                      aria-hidden="true"
                      style="width: 42px; height: 42px; border-radius: 999px; border: 1px solid var(--border-subtle); background: radial-gradient(circle at 35% 35%, var(--bg-hover), var(--bg-deep)); flex-shrink: 0;"
                    />
                    <div
                      style="min-width: 0px; flex: 1 1 0%;"
                    >
                      <div
                        style="display: flex; justify-content: space-between; align-items: center; gap: 8px;"
                      >
                        <div
                          style="font-family: var(--font-display); font-size: 13px; color: var(--text-primary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                        >
                          Cast b
                        </div>
                      </div>
                      <div
                        style="margin-top: 2px; font-size: 10px; color: var(--accent-gold-dim); text-transform: uppercase; letter-spacing: 0.08em;"
                      >
                        IRON · witness
                      </div>
                      <div
                        style="margin-top: 4px; font-size: 11px; color: var(--text-tertiary); line-height: 1.4;"
                      >
                        disposition: guarded
                      </div>
                      <div
                        data-testid="encounter-cast-tile-relationship-b"
                        style="margin-top: 2px; font-size: 11px; font-style: italic; color: var(--text-secondary); line-height: 1.35;"
                      >
                        to her: a measured distance
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                data-testid="encounter-cast-group-offstage"
              >
                <div
                  style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 6px;"
                >
                  <div
                    style="font-size: 10px; text-transform: uppercase; letter-spacing: 0.1em; color: var(--text-muted);"
                  >
                    Offstage
                  </div>
                  <span
                    style="font-size: 9px; text-transform: uppercase; letter-spacing: 0.08em; color: var(--text-muted); border: 1px solid var(--border-subtle); border-radius: 999px; padding: 1px 6px;"
                  >
                    stakes
                  </span>
                </div>
                <div
                  style="display: flex; flex-direction: column; gap: 6px;"
                >
                  <button
                    data-testid="encounter-cast-tile-c"
                    disabled=""
                    style="width: 100%; display: flex; gap: 10px; padding: 10px 8px; border-radius: 10px; border: 1px solid var(--border-subtle); background: var(--bg-raised); text-align: left; cursor: default; opacity: 0.65;"
                    type="button"
                  >
                    <div
                      aria-hidden="true"
                      style="width: 42px; height: 42px; border-radius: 999px; border: 1px solid var(--border-subtle); background: radial-gradient(circle at 35% 35%, var(--bg-hover), var(--bg-deep)); flex-shrink: 0;"
                    />
                    <div
                      style="min-width: 0px; flex: 1 1 0%;"
                    >
                      <div
                        style="display: flex; justify-content: space-between; align-items: center; gap: 8px;"
                      >
                        <div
                          style="font-family: var(--font-display); font-size: 13px; color: var(--text-primary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                        >
                          Cast c
                        </div>
                      </div>
                      <div
                        style="margin-top: 2px; font-size: 10px; color: var(--accent-gold-dim); text-transform: uppercase; letter-spacing: 0.08em;"
                      >
                        IRON · witness
                      </div>
                      <div
                        style="margin-top: 4px; font-size: 11px; color: var(--text-tertiary); line-height: 1.4;"
                      >
                        disposition: guarded
                      </div>
                      <div
                        data-testid="encounter-cast-tile-relationship-c"
                        style="margin-top: 2px; font-size: 11px; font-style: italic; color: var(--text-secondary); line-height: 1.35;"
                      >
                        to her: a measured distance
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </section>
            <section
              data-testid="encounter-ascendant-hand"
              style="display: flex; flex-direction: column; gap: 8px; padding: 12px; background: var(--bg-surface);"
            >
              <div
                style="display: flex; justify-content: space-between; align-items: center;"
              >
                <div
                  style="display: flex; align-items: center; gap: 6px; font-family: var(--font-display); font-size: 11px; letter-spacing: 0.16em; text-transform: uppercase; color: var(--text-tertiary);"
                >
                  Your Hand
                  <span
                    data-testid="encounter-ascendant-hand-new-badge"
                    style="font-size: 9px; letter-spacing: 0.08em; color: var(--accent-gold); border: 1px solid var(--accent-gold-dim); border-radius: 999px; padding: 1px 6px;"
                  >
                    +1 NEW
                  </span>
                </div>
                <div
                  style="font-size: 10px; color: var(--text-muted);"
                >
                  3 playable
                </div>
              </div>
              <button
                data-testid="encounter-ascendant-card-a-playable"
                style="width: 100%; padding: 8px 10px; border-radius: 8px; border: 1px solid var(--border-accent); background: var(--bg-raised); text-align: left; cursor: pointer; opacity: 1;"
                type="button"
              >
                <div
                  style="display: flex; justify-content: space-between; align-items: baseline; gap: 8px;"
                >
                  <div
                    style="font-family: var(--font-display); font-size: 13px; color: var(--text-primary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                  >
                    Card a
                  </div>
                  <div
                    style="font-size: 10px; color: var(--text-muted); white-space: nowrap;"
                  >
                    2 ESS
                  </div>
                </div>
                <div
                  style="margin-top: 3px; font-size: 11px; line-height: 1.35; color: var(--text-tertiary);"
                >
                  a divine nudge for this scene
                </div>
              </button>
              <button
                data-testid="encounter-ascendant-card-b-playable"
                style="width: 100%; padding: 8px 10px; border-radius: 8px; border: 1px solid var(--border-accent); background: var(--bg-raised); text-align: left; cursor: pointer; opacity: 1;"
                type="button"
              >
                <div
                  style="display: flex; justify-content: space-between; align-items: baseline; gap: 8px;"
                >
                  <div
                    style="font-family: var(--font-display); font-size: 13px; color: var(--text-primary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                  >
                    Card b
                  </div>
                  <div
                    style="font-size: 10px; color: var(--text-muted); white-space: nowrap;"
                  >
                    2 ESS
                  </div>
                </div>
                <div
                  style="margin-top: 3px; font-size: 11px; line-height: 1.35; color: var(--text-tertiary);"
                >
                  a divine nudge for this scene
                </div>
              </button>
              <button
                data-testid="encounter-ascendant-card-c-playable"
                style="width: 100%; padding: 8px 10px; border-radius: 8px; border: 1px solid var(--border-accent); background: var(--bg-raised); text-align: left; cursor: pointer; opacity: 1; animation: breathe 1.8s ease-in-out infinite;"
                type="button"
              >
                <div
                  style="display: flex; justify-content: space-between; align-items: baseline; gap: 8px;"
                >
                  <div
                    style="font-family: var(--font-display); font-size: 13px; color: var(--text-primary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                  >
                    Card c
                  </div>
                  <div
                    style="font-size: 10px; color: var(--text-muted); white-space: nowrap;"
                  >
                    2 ESS
                  </div>
                </div>
                <div
                  style="margin-top: 3px; font-size: 11px; line-height: 1.35; color: var(--text-tertiary);"
                >
                  a divine nudge for this scene
                </div>
              </button>
              <button
                data-testid="encounter-ascendant-hand-disclosure"
                style="margin-top: 2px; align-self: flex-start; border: medium; background: transparent; color: var(--text-secondary); font-size: 11px; cursor: pointer;"
                type="button"
              >
                + 1 more
              </button>
            </section>
          </div>
        </div>
      </div>
      <div
        data-testid="encounter-screen-bottom-strip"
        style="min-height: 100px; max-height: 100px; border-radius: 12px; border: 1px solid var(--border-subtle); background: var(--bg-deep); overflow: hidden;"
      >
        <div
          style="padding: 8px;"
        >
          <div
            data-expanded="false"
            data-testid="encounter-outcome-forecast-band"
            data-tier="favorable"
            style="display: flex; flex-direction: column; gap: 4px; padding: 8px 12px; border-radius: 8px; border: 1px solid var(--border-subtle); background: var(--bg-raised); transition: background 200ms ease-out;"
          >
            <div
              data-testid="encounter-outcome-forecast-tier"
              style="color: var(--text-secondary); font-family: var(--font-body); font-size: 12px; font-style: italic; line-height: 1.4;"
            >
              the threads pull toward her
            </div>
            <ul
              data-testid="encounter-outcome-forecast-factors"
              style="margin: 0px; padding: 0px; list-style: none; display: flex; flex-direction: column; gap: 2px; color: var(--text-tertiary); font-size: 11px; line-height: 1.4; transition: opacity 200ms ease-out;"
            >
              <li>
                the captain remembers her name
              </li>
            </ul>
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`EncounterScreen layout snapshots > matches snapshots for full 1920x1080 layout, minimum viable layout, and full 2560x1440 sample > encounter-screen-minimum-1920x1080 1`] = `
<DocumentFragment>
  <div
    style="width: 1920px; height: 1080px;"
  >
    <section
      data-testid="encounter-screen-shell"
      style="height: 100dvh; display: flex; flex-direction: column; overflow: hidden; padding: 16px; gap: 16px; background: var(--bg-abyss);"
    >
      <div
        style="min-height: 0px; flex: 1 1 0%; display: grid; grid-template-columns: 440px minmax(0, 1fr) 540px; gap: 16px; overflow: hidden;"
      >
        <aside
          data-testid="encounter-eira-hero-panel"
          style="height: 100%; min-height: 0px; display: flex; flex-direction: column; gap: 12px; padding: 16px; border-radius: 12px; border: 1px solid var(--border-subtle); background: linear-gradient(180deg, var(--bg-deep), var(--bg-surface)); overflow-y: auto;"
        >
          <header
            style="display: flex; align-items: center; justify-content: space-between; gap: 8px;"
          >
            <span
              style="color: var(--accent-gold); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.15em;"
            >
              The Protagonist
            </span>
          </header>
          <div
            style="display: grid; place-items: center;"
          >
            <div
              aria-hidden="true"
              style="width: 212px; height: 236px; border-radius: 8px; border: 1px solid var(--border-subtle); display: grid; place-items: center; background: radial-gradient(circle at 35% 20%, color-mix(in srgb, var(--accent-gold) 20%, transparent), transparent 35%), linear-gradient(180deg, var(--bg-raised), var(--bg-deep)); color: var(--text-muted); font-family: var(--font-display); letter-spacing: 0.12em; font-size: var(--text-sm);"
            >
              EO
            </div>
          </div>
          <div>
            <h2
              style="margin: 0px; color: var(--text-primary); font-family: var(--font-display); font-size: var(--text-xl);"
            >
              Eira of Bren
            </h2>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-top: 2px;"
            >
              IRON - DRAWN BOND - 28 WINTERS
            </div>
            <div
              style="color: var(--text-secondary); font-size: var(--text-xs); font-style: italic; margin-top: 4px;"
            >
              steady, but reading the room
            </div>
          </div>
          <section>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
            >
              Capability In This Scene
            </div>
            <div
              style="display: grid; gap: 6px;"
            >
              <div
                data-testid="capability-strip"
                style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
              >
                <div
                  style="color: var(--sphere-force-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
                >
                  IRON
                </div>
                <div
                  style="display: flex; gap: 4px;"
                >
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
                  />
                </div>
                <div
                  style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
                >
                  a steady arm in a tight queue
                </div>
              </div>
              <div
                data-testid="capability-strip"
                style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
              >
                <div
                  style="color: var(--sphere-mind-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
                >
                  EYE
                </div>
                <div
                  style="display: flex; gap: 4px;"
                >
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
                  />
                </div>
                <div
                  style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
                >
                  she misses little
                </div>
              </div>
              <div
                data-testid="capability-strip"
                style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
              >
                <div
                  style="color: var(--sphere-spirit-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
                >
                  HEART
                </div>
                <div
                  style="display: flex; gap: 4px;"
                >
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
                  />
                  <span
                    aria-hidden="true"
                    style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
                  />
                </div>
                <div
                  style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
                >
                  her deepest thread
                </div>
              </div>
            </div>
          </section>
          <section>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
            >
              She Carries Into This Scene
            </div>
            <div
              style="display: grid; gap: 8px;"
            >
              <article
                style="border-radius: 10px; border: 1px solid var(--border-subtle); background: var(--bg-raised); padding: 8px 10px;"
              >
                <div
                  style="color: var(--text-primary); font-size: var(--text-sm);"
                >
                  Captain's token
                </div>
                <div
                  style="color: var(--text-tertiary); font-size: var(--text-xs);"
                >
                  small favor - civic guard remembers her
                </div>
              </article>
              <article
                style="border-radius: 10px; border: 1px solid var(--sphere-spirit); background: linear-gradient(90deg, color-mix(in srgb, var(--sphere-spirit-bright) 18%, transparent), transparent); padding: 8px 10px;"
              >
                <div
                  style="color: var(--sphere-spirit-bright); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.1em;"
                >
                  Vow - Active Now
                </div>
                <div
                  style="color: var(--text-primary); font-size: var(--text-sm);"
                >
                  Vow to the small folk
                </div>
                <div
                  style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic;"
                >
                  she will not crush a frightened man
                </div>
              </article>
            </div>
          </section>
          <section>
            <div
              style="color: var(--text-tertiary); font-size: var(--text-xs); text-transform: uppercase; letter-spacing: 0.12em; margin-bottom: 8px;"
            >
              Recent Moments
            </div>
            <div
              style="display: grid; gap: 6px;"
            >
              <article
                style="border-radius: 10px; border: 1px solid var(--border-subtle); background: var(--bg-raised); padding: 8px 10px;"
              >
                <div
                  style="color: var(--text-primary); font-size: var(--text-sm);"
                >
                  Iron market in winter
                </div>
                <div
                  style="color: var(--text-tertiary); font-size: var(--text-xs);"
                >
                  Veiren tested her patience in the open queue.
                </div>
              </article>
            </div>
          </section>
        </aside>
        <div
          data-testid="encounter-screen-center-column"
          style="min-height: 0px; border-radius: 12px; border: 1px solid var(--border-subtle); background: var(--bg-surface); overflow: hidden;"
        >
          <div
            aria-label="Stir her resolve."
            aria-pressed="false"
            class="pulse-gold-on-hover"
            data-reach="iron"
            data-testid="encounter-choice-card-iron"
            role="button"
            style="flex: 1 1 0%; padding: 14px; border-radius: 8px; background: var(--bg-surface); border: 1px solid var(--border-subtle); opacity: 1; transition: opacity 300ms ease-out, border-color 300ms ease-out; position: relative; cursor: pointer; display: flex; flex-direction: column; outline: none;"
            tabindex="0"
          >
            <div
              data-testid="encounter-choice-card-sphere-line"
              style="color: var(--reach-sphere-bright); font-family: var(--font-display); font-size: 11px; letter-spacing: 0.12em; text-transform: uppercase;"
            >
              iron · fuller breath
            </div>
            <div
              data-testid="encounter-choice-card-god-verb"
              style="font-family: var(--font-body); font-size: 18px; font-style: italic; font-weight: 400; color: var(--text-primary); margin-top: 6px;"
            >
              Stir her resolve.
            </div>
            <div
              aria-hidden="true"
              style="height: 1px; width: 36px; background: var(--reach-sphere); margin: 8px 0px 10px;"
            />
            <div
              data-testid="encounter-choice-card-agent-reaction"
              style="font-size: 13px; line-height: 1.55; color: var(--text-primary);"
            >
              Her shoulders set. She closes the distance and meets Veiren's eye.
            </div>
            <div
              data-testid="encounter-choice-card-tilts-toward"
              style="color: var(--text-tertiary); font-size: 12px; margin-top: 10px;"
            >
              Tilts toward: a wound, a debt, or his favour earned
            </div>
            <div
              data-testid="encounter-moral-axis-tilt"
              style="display: flex; align-items: baseline; gap: 6px; color: var(--text-tertiary); font-size: 11px; margin-top: 4px;"
            >
              <span
                aria-hidden="true"
                style="color: var(--reach-sphere-bright);"
              >
                ↬
              </span>
              <span>
                tilts toward
              </span>
              <span
                style="color: var(--reach-sphere-bright); font-family: var(--font-display); letter-spacing: 0.12em; text-transform: uppercase;"
              >
                conqueror
              </span>
            </div>
            <div
              data-testid="encounter-choice-card-fail-forward"
              style="color: var(--text-tertiary); font-size: 11px; font-style: italic; margin-top: 6px;"
            >
              ↗ on fail — she draws steel and the queue splinters
            </div>
            <div
              data-testid="encounter-choice-card-consumes-item"
              style="display: flex; align-items: center; gap: 6px; color: var(--text-muted); font-size: 11px; margin-top: 6px; cursor: help;"
            >
              <span
                aria-hidden="true"
              >
                ◇
              </span>
              <span>
                consumes: captain-token
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="encounter-screen-right-rail"
          style="min-height: 0px; border-radius: 12px; border: 1px solid var(--border-subtle); background: var(--bg-surface); overflow: hidden;"
        >
          <section
            data-testid="encounter-cast-rail"
            style="display: flex; flex-direction: column; gap: 10px; padding: 12px; height: 100%; overflow-y: auto; background: var(--bg-surface);"
          >
            <div
              style="display: flex; justify-content: space-between; align-items: baseline;"
            >
              <div
                style="font-family: var(--font-display); font-size: 11px; letter-spacing: 0.16em; text-transform: uppercase; color: var(--text-tertiary);"
              >
                Cast In The Scene
              </div>
              <div
                style="font-size: 10px; color: var(--text-muted);"
              >
                0
              </div>
            </div>
            <div
              style="margin-top: 8px; padding: 10px 12px; border-radius: 8px; border: 1px dashed var(--border-subtle); color: var(--text-muted); font-size: 12px; font-style: italic;"
            >
              no cast is foregrounded in this beat
            </div>
          </section>
        </div>
      </div>
      <div
        data-testid="encounter-screen-bottom-strip"
        style="min-height: 100px; max-height: 100px; border-radius: 12px; border: 1px solid var(--border-subtle); background: var(--bg-deep); overflow: hidden;"
      >
        <div
          data-testid="encounter-outcome-forecast-band"
          data-tier="unknown"
          style="display: flex; flex-direction: column; gap: 4px; padding: 8px 12px; border-radius: 8px; border: 1px solid var(--border-subtle); background: var(--bg-raised);"
        >
          <div
            data-testid="encounter-outcome-forecast-factors"
            style="color: var(--text-tertiary); font-size: 12px; font-style: italic; line-height: 1.4;"
          >
            the threads are still gathering
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
